--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@ body {
   height: 500px;
   margin: 30px auto;
   display: none;
-  background: linear-gradient(to bottom right, #d3d3d3, #a8a8a8); /* tonos plomo suaves */
+  background-image: url('img/007.jpg'); /* cambia esto a la ruta real */
+  background-size: cover; /* asegura que la imagen cubra todo el fondo */
+  background-position: center; /* centra la imagen */
   border-radius: 20px;
   box-shadow: 0 8px 24px rgba(80, 80, 80, 0.5); /* sombra gris difusa */
   border: 2px solid #999;
