--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Galería de Videos - Roman Civilization</title>
+  <title>proyecto sintesis - curiosidades de los seres vivos 7°A</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
 
