--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </head>
 <body>
 
-  <h1>Galería de Videos - Roman Civilization</h1>
+  <h1>Proyecto sintesis - Curiosidades del cuerpo humano 7°A</h1>
 
   <!-- Galería -->
   <div class="galeria" id="galeria">
