--- a/index.html
+++ b/index.html
@@ -100,22 +100,22 @@
   <!-- Galería -->
   <div class="galeria" id="galeria">
     <div class="contenedor-video" onclick="reproducirVideo('videos/video1.mp4')">
-      <img src="img/thumb1.jpg" alt="Video 1">
+      <img src="img/thumb1.jpg" alt="Huesos">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('videos/video2.mp4')">
-      <img src="img/thumb2.jpg" alt="Video 2">
+      <img src="img/thumb2.jpg" alt="Bacterias">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('videos/video3.mp4')">
-      <img src="img/thumb3.jpg" alt="Video 3">
+      <img src="img/thumb3.jpg" alt="Músculos">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('videos/video4.mp4')">
-      <img src="img/thumb4.jpg" alt="Video 4">
+      <img src="img/thumb4.jpg" alt="Locomoción humana">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('videos/video5.mp4')">
-      <img src="img/thumb5.jpg" alt="Video 5">
+      <img src="img/thumb5.jpg" alt="Los animales">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('videos/video6.mp4')">
-      <img src="img/thumb6.jpg" alt="Video 6">
+      <img src="img/thumb6.jpg" alt="Locomoción en animales">
     </div>
   </div>
 
