--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="contenedor-video" onclick="reproducirVideo('videos/video2.mp4')">
       <img src="img/thumb2.jpg" alt="Bacterias">
     </div>
-    <div class="contenedor-video" onclick="reproducirVideo('videos/Musculos.mp4')">
+    <div class="contenedor-video" onclick="reproducirVideo('Videos/Musculos.mp4')">
       <img src="img/thumb3.jpg" alt="Músculos">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('videos/video4.mp4')">
