--- a/index.html
+++ b/index.html
@@ -95,14 +95,15 @@
 </head>
 <body>
 
+  
   <h1>Proyecto sintesis - Curiosidades del cuerpo humano 7°A</h1>
 
   <!-- Galería -->
   <div class="galeria" id="galeria">
-    <div class="contenedor-video" onclick="reproducirVideo('videos/video1.mp4')">
+    <div class="contenedor-video" onclick="reproducirVideo('Videos/sistema oseo.mp4')">
       <img src="img/thumb1.jpg" alt="Huesos">
     </div>
-    <div class="contenedor-video" onclick="reproducirVideo('videos/video2.mp4')">
+    <div class="contenedor-video" onclick="reproducirVideo('videos/Las bacterias septimo a.mp4')">
       <img src="img/thumb2.jpg" alt="Bacterias">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('Videos/Musculos.mp4')">
