--- a/index.html
+++ b/index.html
@@ -107,16 +107,16 @@
       <img src="img/thumb2.jpg" alt="Bacterias">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('Videos/Musculos.mp4')">
-      <img src="img/thumb3.jpg" alt="Músculos">
+      <img src="img/musculos septimo A.jpg" alt="Músculos">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('videos/video4.mp4')">
       <img src="img/thumb4.jpg" alt="Locomoción humana">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('videos/video5.mp4')">
-      <img src="img/thumb5.jpg" alt="Los animales">
+      <img src="img/animales.jpg" alt="Los animales">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('videos/video6.mp4')">
-      <img src="img/thumb6.jpg" alt="Locomoción en animales">
+      <img src="img/locomocion en animales.jpg" alt="Locomoción en animales">
     </div>
   </div>
 
