--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
   <!-- Galería -->
   <div class="galeria" id="galeria">
     <div class="contenedor-video" onclick="reproducirVideo('Videos/sistema oseo.mp4')">
-      <img src="img/huesos septimo A.jpg" alt="Huesos">
+      <img src="img/huesos septimo A.html" alt="Huesos">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('videos/Las bacterias septimo a.mp4')">
-      <img src="img/bacterias seprimo A.jpg" alt="Bacterias">
+      <img src="img/bacterias septimo A.jpg" alt="Bacterias">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('Videos/Musculos.mp4')">
       <img src="img/musculos septimo A.jpg" alt="Músculos">
