--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
       <img src="img/musculos septimo A.jpg" alt="Músculos">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('videos/video4.mp4')">
-      <img src="img/thumb4.jpg" alt="Locomoción humana">
+      <img src="img/locomocion en humanos.webp" alt="Locomoción humana">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('videos/video5.mp4')">
       <img src="img/animales.jpg" alt="Los animales">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('videos/video6.mp4')">
-      <img src="img/locomocion en animales.jpg" alt="Locomoción en animales">
+      <img src="img/locomocion en animales.webp" alt="Locomoción en animales">
     </div>
   </div>
 
