--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="contenedor-video" onclick="reproducirVideo('Videos/sistema oseo.mp4')">
       <img src="img/huesos septimo A.html" alt="Huesos">
     </div>
-    <div class="contenedor-video" onclick="reproducirVideo('videos/Las bacterias septimo a.mp4')">
+    <div class="contenedor-video" onclick="reproducirVideo('videos/Las bacterias septimo a(1).mp4')">
       <img src="img/bacterias septimo A.jpg" alt="Bacterias">
     </div>
     <div class="contenedor-video" onclick="reproducirVideo('Videos/Musculos.mp4')">
